made some changes

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       </p>
 
       <div class="contact-links">
-        <a href="mailto:ademolafatimah@gmail.com" class="contact-link"
+        <a href="mailto:ademolafatimah1410@gmail.com" class="contact-link"
           >📧 Email</a>
         <a
           href="https://www.linkedin.com/in/fatimah-ademola-9a64422a8"
