Worked on the responsiveness

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <header>
       <nav class="nav-bar">
         <a href="#" id="logo"><span>F</span>atimah</a>
-        <ul>
+
+        <div class="hamburger" id="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+
+        <ul class="nav-menu" id="nav-menu">
           <li><a href="#">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
@@ -41,7 +48,7 @@
       </div>
     </section>
     <!-- About section -->
-    <div id="about" >
+    <div id="about">
       <p class="about-description">👩🏽‍💻About Me</p>
       <p class="about-text">
         I’m a Frontend Developer who is dedicated to building accessible,
@@ -57,7 +64,7 @@
       </p>
     </div>
     <!-- Project section -->
-    <section id="projects" >
+    <section id="projects">
       <h2>💼Projects</h2>
       <div class="project-container">
         <div class="project-card">
@@ -67,7 +74,9 @@
             seamlessly. Designed with HTML, CSS, and JavaScript.
           </p>
           <div class="links">
-            <a href="https://github.com/AdemolaFatimah/ERL-Logistics" target="_blank"
+            <a
+              href="https://github.com/AdemolaFatimah/ERL-Logistics"
+              target="_blank"
               >View Project</a
             >
           </div>
@@ -81,7 +90,9 @@
             UI.
           </p>
           <div class="links">
-            <a href="https://github.com/AdemolaFatimah/Calculator" target="_blank"
+            <a
+              href="https://github.com/AdemolaFatimah/Calculator"
+              target="_blank"
               >View Project</a
             >
           </div>
@@ -94,7 +105,9 @@
             highlights and brand story. Designed with HTML and CSS
           </p>
           <div class="links">
-            <a href="https://github.com/AdemolaFatimah/TWINKLES-SPARKLES" target="_blank"
+            <a
+              href="https://github.com/AdemolaFatimah/TWINKLES-SPARKLES"
+              target="_blank"
               >View Project</a
             >
           </div>
@@ -127,12 +140,12 @@
       </div>
     </section>
     <!-- Skill Section -->
-    <section id="skills" >
+    <section id="skills">
       <h2>Skills</h2>
       <div class="skill-card-container">
         <div class="skill-card">
           <h3>Frontend</h3>
-          <p>HTML, CSS and JavaScript</p>
+          <p>HTML, CSS and JavaScript(ES6+)</p>
         </div>
         <div class="skill-card">
           <h3>Framework</h3>
@@ -141,6 +154,10 @@
         <div class="skill-card">
           <h3>Version Control</h3>
           <p>Git and Github</p>
+        </div>
+        <div class="skill-card">
+          <p>Responsive web design</p>
+          <p>Accessibility and SEO</p>
         </div>
       </div>
     </section>
@@ -154,25 +171,29 @@
 
       <div class="contact-links">
         <a href="mailto:ademolafatimah1410@gmail.com" class="contact-link"
-          >📧 Email</a>
+          >📧 Email</a
+        >
         <a
           href="https://www.linkedin.com/in/fatimah-ademola-9a64422a8"
           target="_blank"
           class="contact-link"
-          >💼 LinkedIn</a>
+          >💼 LinkedIn</a
+        >
         <a
           href="https://github.com/AdemolaFatimah"
           target="_blank"
           class="contact-link"
-          >💻 GitHub</a>
+          >💻 GitHub</a
+        >
         <a
           href="https://x.com/Ademola_Fatimah"
           target="_blank"
           class="contact-link"
-          >X</a>
+          >X</a
+        >
       </div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
