--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       <h2>💼Projects</h2>
       <div class="project-container">
         <div class="project-card">
+          <img src="./Assets/ERL-Logistics.png" alt="" height="200px">
           <h3>ERL Logistics</h3>
           <p>
             A logistics landing page that allows users to track their packages
@@ -75,7 +76,7 @@
           </p>
           <div class="links">
             <a
-              href="https://github.com/AdemolaFatimah/ERL-Logistics"
+              href="https://erl-logistics-46kokvkyn-ademolafatimahs-projects.vercel.app/"
               target="_blank"
               >View Project</a
             >
@@ -83,6 +84,7 @@
         </div>
 
         <div class="project-card">
+          <img src="./Assets/Calculator.png" alt="" height="220px">
           <h3>Calculator App</h3>
           <p>
             A simple calculator built to perform basic arithmetic operations
@@ -91,7 +93,7 @@
           </p>
           <div class="links">
             <a
-              href="https://github.com/AdemolaFatimah/Calculator"
+              href="https://ademolafatimah.github.io/Calculator/"
               target="_blank"
               >View Project</a
             >
@@ -99,6 +101,7 @@
         </div>
 
         <div class="project-card">
+          <img src="./Assets/Twinkle-Sparkles.png" alt="" height="200px">
           <h3>Twinkle-Sparkles</h3>
           <p>
             A stylish and responsive jewelry landing page showcasing product
@@ -106,7 +109,7 @@
           </p>
           <div class="links">
             <a
-              href="https://github.com/AdemolaFatimah/TWINKLES-SPARKLES"
+              href="https://ademolafatimah.github.io/TWINKLES-SPARKLES/"
               target="_blank"
               >View Project</a
             >
@@ -192,6 +195,10 @@
         >
       </div>
     </section>
+    <footer>
+    <p>© 2025 Ademola Fatimah | Built with 💻 and passion.</p>
+  </footer>
+
 
     <script src="script.js" defer></script>
   </body>
