worked on responsiveness

--- a/index.html
+++ b/index.html
@@ -116,7 +116,24 @@
           </div>
         </div>
       </div>
+       
+          <div class="project-container1">
+            <div class="project-card1">
+          <img src="./Assets/Quiz-App.png" alt="" height="205px">
+          <h3>Quiz App</h3>
+          <p>
+            An interactive React-based web app with dynamic questions, real-time scoring and a responsive UI built to showcase modern frontend development skills.
+          </p>
+          <div class="links">
+            <a
+              href="https://ademolafatimah.github.io/Quiz-App/"
+              target="_blank"
+              >View Project</a
+            >
+          </div>
+        </div>
     </section>
+
     <!-- Experience section -->
     <section id="experience">
       <h2>📚Experience</h2>
@@ -142,6 +159,7 @@
         </div>
       </div>
     </section>
+
     <!-- Skill Section -->
     <section id="skills">
       <h2>Skills</h2>
