--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
       <div class="skill-card-container">
         <div class="skill-card">
           <h3>Frontend</h3>
-          <p>HTML, CSS and JavaScript(ES6+)</p>
+          <p>HTML, JavaScript(ES6+) and React</p>
         </div>
         <div class="skill-card">
           <h3>Framework</h3>
-          <p>React (Beginner)</p>
+          <p>CSS and Tailwind CSS</p>
         </div>
         <div class="skill-card">
           <h3>Version Control</h3>
@@ -214,7 +214,7 @@
       </div>
     </section>
     <footer>
-    <p>© 2025 Ademola Fatimah | Built with 💻 and passion.</p>
+    <p>© 2025 Ademola Fatimah | Crafted with passion and a love for coding.</p>
   </footer>
 
 
