--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             >Frontend Developer</span
           >
           <span style="--i: 3" data-text="Programmer">Programmer</span>
-          <span style="--i: 2" data-text="Coder">Coder</span>
-          <span style="--i: 1" data-text="Designer">Designer</span>
+          <span style="--i: 2" data-text="Coder">UI Developer</span>
+          <span style="--i: 1" data-text="Designer">Coder</span>
         </h2>
         <p>
           I love bringing ideas to life through clean, accessible, and
@@ -49,7 +49,7 @@
     </section>
     <!-- About section -->
     <div id="about">
-      <p class="about-description">👩🏽‍💻About Me</p>
+      <p class="about-description">About Me</p>
       <p class="about-text">
         I’m a Frontend Developer who is dedicated to building accessible,
         responsive, and user-focused web experiences. My journey into frontend
@@ -65,7 +65,7 @@
     </div>
     <!-- Project section -->
     <section id="projects">
-      <h2>💼Projects</h2>
+      <h2>Projects</h2>
       <div class="project-container">
         <div class="project-card">
           <img src="./Assets/ERL-Logistics.png" alt="" height="200px">
@@ -136,7 +136,7 @@
 
     <!-- Experience section -->
     <section id="experience">
-      <h2>📚Experience</h2>
+      <h2>Experience</h2>
       <div class="experience-card">
         <h3>Frontend Development Mentee — Shelevate Bootcamp</h3>
         <h4>July 2025 – October 2025</h4>
